deploy/k8s/overlays/jax-cluster-dev-10--dev/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jds-ui-httproute
spec:
  parentRefs:
    - name: dev-gateway
      sectionName: https
  hostnames:
    - jds-apps-dev.jax.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /echo/
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: "Strict-Transport-Security"
                value: "max-age=31536000; includeSubDomains; preload"
      backendRefs:
        - name: jds-ui-demo
          port: 80
